// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoWinnerSymbol should match snapshot, animate false 1`] = `
<i
  aria-label="No Winner Symbol"
  className="icon-no-winner big-symbol no-winner"
/>
`;

exports[`NoWinnerSymbol should match snapshot, animate true 1`] = `
<i
  aria-label="No Winner Symbol"
  className="icon-no-winner big-symbol no-winner animate-no-winner"
/>
`;
